--- a/docker/ega.yml
+++ b/docker/ega.yml
@@ -22,7 +22,7 @@ services:
 
   # ReST frontend
   frontend:
-    build: images/common
+    build: images/frontend
     depends_on:
       - db
     hostname: ega_frontend
@@ -31,12 +31,7 @@ services:
     expose:
       - 80
     container_name: ega_frontend
-    image: nbis/ega:common
-    volumes:
-       - ${CONF}:/etc/ega/conf.ini:ro
-       - ${CODE}:/root/ega
-       - ${ENTRYPOINTS}/frontend.sh:/usr/local/bin/frontend.sh:ro
-    command: frontend.sh
+    image: nbis/ega:frontend
 
   # SFTP inbox
   inbox:
@@ -44,36 +39,30 @@ services:
     hostname: ega_inbox
     depends_on:
       - db
-      - cega_users
+#      - cega_users
     env_file: .env.d/db
     ports:
       - "2222:22"
     container_name: ega_inbox
     image: nbis/ega:inbox
     volumes:
-       - ${CONF}:/etc/ega/conf.ini:ro
-       - ${CODE}:/root/ega
        - inbox:/ega/inbox
-       - ${ENTRYPOINTS}/inbox.sh:/usr/local/bin/inbox.sh:ro
     command: inbox.sh
 
   # Vault
   vault:
-    build: images/common
+    build: images/vault
     depends_on:
       - db
       - mq
-      - cega_mq
+#      - cega_mq
       - inbox
     hostname: ega_vault
     container_name: ega_vault
-    image: nbis/ega:common
+    image: nbis/ega:vault 
     volumes:
-       - ${CONF}:/etc/ega/conf.ini:ro
-       - ${CODE}:/root/ega
        - staging:/ega/staging
        - vault:/ega/vault
-       - ${ENTRYPOINTS}/vault.sh:/usr/local/bin/vault.sh:ro
     command: vault.sh
 
   # Ingestion Workers
@@ -82,84 +71,78 @@ services:
     depends_on:
       - db
       - mq
-      - cega_mq
-      - keys
+#      - cega_mq
+#      - keys
       - inbox
     image: nbis/ega:worker
     environment:
       - GPG_TTY=/dev/console
     volumes:
-       - ${CONF}:/etc/ega/conf.ini:ro
-       - ${CODE}:/root/ega
        - inbox:/ega/inbox
        - staging:/ega/staging
-       - ${SSL_CERT}:/etc/ega/ssl.cert:ro
-       - ${GPG_HOME}/pubring.kbx:/root/.gnupg/pubring.kbx:ro
-       - ${GPG_HOME}/trustdb.gpg:/root/.gnupg/trustdb.gpg
-       - ${ENTRYPOINTS}/ingest.sh:/usr/local/bin/ingest.sh:ro
     command: ingest.sh
 
   # Key server
-  keys:
-    env_file: .env.d/gpg
-    build: images/worker
-    environment:
-      - GPG_TTY=/dev/console
-    # depends_on:
-    #   - monitors
-    hostname: ega_keys
-    container_name: ega_keys
-    image: nbis/ega:worker
-    tty: true
-    volumes:
-       - ${CONF}:/etc/ega/conf.ini:ro
-       - ${KEYS}:/etc/ega/keys.ini:ro
-       - ${CODE}:/root/ega
-       - ${SSL_CERT}:/etc/ega/ssl.cert:ro
-       - ${SSL_KEY}:/etc/ega/ssl.key:ro
-       - ${GPG_HOME}/pubring.kbx:/root/.gnupg/pubring.kbx
-       - ${GPG_HOME}/trustdb.gpg:/root/.gnupg/trustdb.gpg
-       - ${GPG_HOME}/openpgp-revocs.d:/root/.gnupg/openpgp-revocs.d:ro
-       - ${GPG_HOME}/private-keys-v1.d:/root/.gnupg/private-keys-v1.d:ro
-       - ${RSA_SEC}:/etc/ega/rsa/sec.pem:ro
-       - ${RSA_PUB}:/etc/ega/rsa/pub.pem:ro
-       - ${ENTRYPOINTS}/keys.sh:/usr/local/bin/keys.sh:ro
-    command: keys.sh
-
-  # # Error Monitors
-  # monitors:
-  #   build: images/monitors
-  #   # depends_on:
-  #   #   - db
-  #   ports:
-  #     - "10514:10514"
-  #   expose:
-  #     - 10514
-  #   hostname: ega_monitors
-  #   container_name: ega_monitors
-  #   image: nbis/ega:monitors
-  #   command: ["rsyslogd", "-n"]
-
-  # Faking Central EGA
-  cega_users:
-    build: images/cega_users
-    image: nbis/ega:cega_users
-    container_name: cega_users
-    ports:
-      - "9100:80"
-    volumes:
-       - ${CEGA_USERS}:/cega/users:rw
-
-  cega_mq:
-    build: images/cega_mq
-    hostname: cega_mq
-    ports:
-      - "15673:15672"
-    image: nbis/ega:cega_mq
-    container_name: cega_mq
-    volumes:
-       - ${CEGA_MQ_DEFS}:/etc/rabbitmq/defs.json:ro
-
+#  keys:
+#    env_file: .env.d/gpg
+#    build: images/worker
+#    environment:
+#      - GPG_TTY=/dev/console
+#    # depends_on:
+#    #   - monitors
+#    hostname: ega_keys
+#    container_name: ega_keys
+#    image: nbis/ega:worker
+#    tty: true
+#    volumes:
+#       - ${CONF}:/etc/ega/conf.ini:ro
+#       - ${KEYS}:/etc/ega/keys.ini:ro
+#       - ${CODE}:/root/ega
+#       - ${SSL_CERT}:/etc/ega/ssl.cert:ro
+#       - ${SSL_KEY}:/etc/ega/ssl.key:ro
+#       - ${GPG_HOME}/pubring.kbx:/root/.gnupg/pubring.kbx
+#       - ${GPG_HOME}/trustdb.gpg:/root/.gnupg/trustdb.gpg
+#       - ${GPG_HOME}/openpgp-revocs.d:/root/.gnupg/openpgp-revocs.d:ro
+#       - ${GPG_HOME}/private-keys-v1.d:/root/.gnupg/private-keys-v1.d:ro
+#       - ${RSA_SEC}:/etc/ega/rsa/sec.pem:ro
+#       - ${RSA_PUB}:/etc/ega/rsa/pub.pem:ro
+#       - ${ENTRYPOINTS}/keys.sh:/usr/local/bin/keys.sh:ro
+#    command: keys.sh
+#
+#  # # Error Monitors
+#  # monitors:
+#  #   build: images/monitors
+#  #   # depends_on:
+#  #   #   - db
+#  #   ports:
+#  #     - "10514:10514"
+#  #   expose:
+#  #     - 10514
+#  #   hostname: ega_monitors
+#  #   container_name: ega_monitors
+#  #   image: nbis/ega:monitors
+#  #   command: ["rsyslogd", "-n"]
+#
+#  # Faking Central EGA
+#  cega_users:
+#    build: images/cega_users
+#    image: nbis/ega:cega_users
+#    container_name: cega_users
+#    ports:
+#      - "9100:80"
+#    volumes:
+#       - ${CEGA_USERS}:/cega/users:rw
+#
+#  cega_mq:
+#    build: images/cega_mq
+#    hostname: cega_mq
+#    ports:
+#      - "15673:15672"
+#    image: nbis/ega:cega_mq
+#    container_name: cega_mq
+#    volumes:
+#       - ${CEGA_MQ_DEFS}:/etc/rabbitmq/defs.json:ro
+#
 # Use the default driver for volume creation
 volumes:
   inbox:
