--- a/docker/images/inbox/Dockerfile
+++ b/docker/images/inbox/Dockerfile
@@ -40,5 +40,27 @@ RUN git clone --depth 1 https://github.com/NBISweden/LocalEGA.git /root/ega
 COPY inbox.sh /usr/local/bin/inbox.sh
 RUN /usr/local/bin/inbox.sh
 
-RUN /usr/bin/ssh-keygen -A
-CMD ["/usr/sbin/sshd", "-D", "-e"]
+RUN sed -i 's/#Port.*$/Port 2022/' /etc/ssh/sshd_config
+RUN chmod 775 /var/run
+RUN rm -f /var/run/nologin
+
+# setup git user
+RUN adduser --system -s /bin/bash -u 1234321 -g 0 git # uid to replace later
+RUN chmod 775 /etc/ssh /home # keep writable for openshift user group (root)
+RUN chmod 660 /etc/ssh/sshd_config
+RUN chmod 664 /etc/passwd /etc/group # to help uid fix
+RUN ln -s /home/git /repos # nicer repo url
+
+EXPOSE 2022
+
+USER git
+# CMD ["/usr/sbin/sshd", "-D"]
+# FYI sed -i uses a temporary fail which approach fails
+CMD echo -e ",s/1234321/`id -u`/g\\012 w" | ed -s /etc/passwd && \
+    mkdir -p /home/git/.ssh && \
+    touch /home/git/.ssh/authorized_keys && \
+    chmod 700 /home/git/.ssh && \
+    chmod 600 /home/git/.ssh/authorized_keys && \
+    mkdir /home/git/sample.git && \
+    ssh-keygen -A && \
+    exec /usr/sbin/sshd -D
