--- a/docker/images/common/ega.conf
+++ b/docker/images/common/ega.conf
@@ -2,12 +2,12 @@
 log_conf = debug
 
 [frontend]
-host = ega_frontend
+host = frontend
 port = 80
 
 [db]
-host = ega_db
-username = postgres
+host = db
+username = lega 
 password = somesecretpassword
 
 [ingestion]
