--- a/docker/images/frontend/Dockerfile
+++ b/docker/images/frontend/Dockerfile
@@ -3,7 +3,6 @@ FROM tornroos/ega:common
 COPY frontend.sh /usr/local/bin/frontend.sh
 
 RUN git clone --depth 1 https://github.com/NBISweden/LocalEGA.git /root/ega
-RUN /usr/local/bin/frontend.sh
+RUN pip3.6 install /root/ega/src
 
-ENTRYPOINT ["ega-frontend"]
-
+CMD ega-frontend 
