--- a/docker/images/db/Dockerfile
+++ b/docker/images/db/Dockerfile
@@ -1,5 +1,6 @@
 FROM centos/postgresql-95-centos7 
 LABEL maintainer "Frédéric Haziza, NBIS"
 
-
 COPY db.sql /docker-entrypoint-initdb.d/db.sql
+#CMD postgres --single -D $PGDATA $POSTGRESQL_DATABASE < /docker-entrypoint-initdb.d/db.sql
+#PGPASSWORD=$POSTGRESQL_PASSWORD psql -U $POSTGRESQL_USER $POSTGRESQL_DATABASE < /docker-entrypoint-initdb.d/db.sql
