--- a/docker/images/inbox/Dockerfile
+++ b/docker/images/inbox/Dockerfile
@@ -1,12 +1,13 @@
 FROM centos:latest
 LABEL maintainer "Frédéric Haziza, NBIS"
 
-RUN yum -y update && \
+RUN yum install -y epel-release && \
+    yum -y update && \
     yum -y install gcc git make rsyslog \
 		   openssh-server \
 		   nss-tools nc nmap tcpdump lsof strace \
 	       	   bash-completion bash-completion-extras \
-		   postgresql-devel pam-devel libcurl-devel json-c-devel ed
+		   postgresql-devel pam-devel libcurl-devel jq-devel ed
 
 ##################################
 RUN mkdir -p /usr/local/lib/ega
@@ -35,8 +36,11 @@ COPY sshd_config /etc/ssh/sshd_config
 RUN useradd ega
 RUN /usr/sbin/rsyslogd
 
-RUN git clone --depth 1 https://github.com/NBISweden/LocalEGA.git /root/ega
+RUN git clone https://github.com/NBISweden/LocalEGA.git /root/ega 
+RUN adduser --system -s /bin/bash -u 1234321 -g 0 git # uid to replace later
+
 COPY inbox.sh /usr/local/bin/inbox.sh
+
 RUN /usr/local/bin/inbox.sh
 
 RUN sed -i 's/#Port.*$/Port 2022/' /etc/ssh/sshd_config
@@ -44,15 +48,17 @@ RUN chmod 775 /var/run
 RUN rm -f /var/run/nologin
 
 # setup git user
-RUN adduser --system -s /bin/bash -u 1234321 -g 0 git # uid to replace later
+#RUN adduser --system -s /bin/bash -u 1234321 -g 0 git # uid to replace later
 RUN chmod 775 /etc/ssh /home # keep writable for openshift user group (root)
 RUN chmod 660 /etc/ssh/sshd_config
 RUN chmod 664 /etc/passwd /etc/group # to help uid fix
 
+RUN chmod g+s /ega/inbox
+RUN chmod +s /usr/sbin/sshd
+
 EXPOSE 2022
 
 USER git
-# CMD ["/usr/sbin/sshd", "-D"]
 # FYI sed -i uses a temporary fail which approach fails
 CMD echo -e ",s/1234321/`id -u`/g\\012 w" | ed -s /etc/passwd && \
     mkdir -p /home/git/.ssh && \
