--- a/docker/images/cega_users/Dockerfile
+++ b/docker/images/cega_users/Dockerfile
@@ -1,11 +1,11 @@
-FROM nbis/ega:common
+FROM tornroos/ega:common
 LABEL maintainer "Frédéric Haziza, NBIS"
 
 
 ##################################
 RUN mkdir /cega
 VOLUME /cega/users
-EXPOSE 80
+EXPOSE 8080
 
 COPY users.html /cega/users.html
 
