--- a/docker/images/common/ega.conf
+++ b/docker/images/common/ega.conf
@@ -6,8 +6,8 @@ host = 0.0.0.0
 port = 8080
 
 [db]
-host = db
-username = lega 
+host = ega-db
+username = lega_user 
 password = somesecretpassword
 
 [ingestion]
